# elim

./: .gitignore  README.md
lab/compilazione/: info.txt
lab/es_1/: main.cpp  output
lab/es_2/: output
lab/es_3/: CMakeLists.txt  Makefile  cmake_install.cmake  es_3.cbp  main  main.cpp  mat.cpp  output
lab/es_3_padding/: CMakeCache.txt  CMakeLists.txt  es_3  main  main.cpp  output
lab/es_4_corr_convoluzione/: CMakeLists.txt  main  main.cpp
lab/es_4_corr_convoluzione/src-20240415/: main
lab/esercitazione_esame/Canny/: CMakeCache.txt  CMakeLists.txt  Canny  Canny.cpp  CannyFun.cpp  Makefile  cmake_install.cmake  main.cpp
lab/esercitazione_esame/Canny2/: CMakeCache.txt  CMakeLists.txt  Canny.cpp  Makefile  cmake_install.cmake  es_3
lab/esercitazione_esame/Harris/: CMakeCache.txt  CMakeLists.txt  Harris  Harris.cpp  HarrisFun.cpp  Makefile  cmake_install.cmake  main.cpp
lab/esercitazione_esame/Harris2/: CMakeCache.txt  Makefile  cmake_install.cmake  es_3  main.cpp
lab/esercitazione_esame/HoughCerchi2/: CMakeCache.txt  Makefile  cmake_install.cmake  es_3  main.cpp
lab/esercitazione_esame/HoughCircles/: CMakeCache.txt  CMakeLists.txt  HoughCerchi.cpp  Hough_Cerchi  Makefile  cmake_install.cmake  main.cpp
lab/esercitazione_esame/HoughLines/: CMakeCache.txt  CMakeLists.txt  Hough  HoughRette.cpp  Makefile  cmake_install.cmake  main.cpp
lab/esercitazione_esame/HuughRette2/: CMakeCache.txt  Makefile  cmake_install.cmake  es_3  main.cpp
lab/esercitazione_esame/Kmeans/: CMakeCache.txt  CMakeLists.txt  Clustering.cpp  Makefile  cmake_install.cmake  es_3  kmeansColor.cpp  main.cpp
lab/esercitazione_esame/LoG/: CMakeCache.txt  CMakeLists.txt  LoG  Makefile  cmake_install.cmake  main.cpp
lab/esercitazione_esame/OtsuK1/: CMakeCache.txt  CMakeLists.txt  Makefile  Otsu  Otsu.cpp  cmake_install.cmake
lab/esercitazione_esame/OtsuK2/: CMakeCache.txt  CMakeLists.txt  Makefile  Otsu.cpp  Otsu_2  cmake_install.cmake  main.cpp
lab/esercitazione_esame/RG/: CMakeCache.txt  CMakeLists.txt  Makefile  RG  RegionGrowing.cpp  cmake_install.cmake  main.cpp
lab/esercitazione_esame/Split&Merge/: CMakeCache.txt  Makefile  cmake_install.cmake  es_3  main.cpp
lab/esercitazione_esame/SplitAndMerge/: CMakeCache.txt  CMakeLists.txt  Makefile  SPM  SplitAndMerge.cpp  cmake_install.cmake  main.cpp
lab/esercitazione_esame/correlazione/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  correlazione
lab/esercitazione_esame/correlazione2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  correlazione  filtering.cpp  main.cpp
lab/esercitazione_esame/kmeans2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  es_3  main.cpp
lab/esercitazione_esame/laplaciano/: CMakeCache.txt  (+5 more)
lab/kmeans/: output
(+26 files in other folders)
